<resources>
    <string name="app_name">Простые графики</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- окно создания/изменения график -->
    <string name="graphic_title">Параметры графика</string>
    <string name="name_of_the_chart">Название графика</string>
    <string name="x_axis_signature">Подпись по оси X</string>
    <string name="y_axis_signature">Подпись по оси Y</string>
    <string name="number_of_digits_after_decimal_point">Число цифр после запятой по оси Y</string>
    <string name="x_axis_type">Тип подписи значений по оси X</string>
    <string name="x_axis_date_format">Формат даты</string>
    <string name="lines_title">Параметры линий</string>
    <string name="button_table">Данные графика</string>
    <string name="name_of_the_line">Название линии графика</string>
    <string name="field_null">Пустое поле</string>
    <string name="invalid_number">Некорректное число</string>

    <string name="name_of_column_Y">Название колонки по оси Y</string>
    <string name="cancel">Отмена</string>
    <string name="to_table">К таблице значений</string>
    <string name="db_read_error">Невозможно прочитать из базы данных</string>

    <!-- окно таблицы -->
    <string name="table_column_corner">№</string>
    <string name="table_default_hint">Значение</string>
    <string name="table_row_edit">Редактирование</string>

    <string name="button_add">Добавить строку</string>
    <string name="button_log">в логи</string>
    <string name="example_title">Для теста</string>
    <string name="example_button_table">Таблица</string>
    <string name="example_button_graphic">График</string>
    <string name="example_button_test_table">Тест Таблица</string>

    <!-- меню -->
    <string name="menu_edit">Редактировать</string>
    <string name="menu_delete">Удалить</string>
    <string name="menu_save">Сохранить</string>
    <string name="menu_cancel">Отменить</string>
    <string name="menu_home">Домой</string>
    <string name="menu_setting">Настройки</string>

    <!-- заголовки окон -->
    <string name="title_new_graphic">Добавление графика</string>
    <string name="title_edit_graphic">Изменение графика</string>
    <string name="title_graphic">График</string>
    <string name="title_table">Данные графика</string>
    <string name="title_setting">Настройки</string>

    <!-- всплывающее сообщение -->
    <string name="message_save">Сохранено</string>
  
    <!-- Диалоговые окна -->  
    <string name="dialog_title">Предупреждение</string>
    <string name="dialog_title_info">Информация</string>
    <string name="dialog_message">Вы действительно хотите удалить этот график?</string>
    <string name="dialog_negative_button">Отмена</string>
    <string name="dialog_positive_button">Да</string>
    <string name="dialog_close_button">Закрыть</string>

    <!-- Настройки -->
    <string name="setting_export_title">Экспорт графиков</string>
    <string name="setting_export_description">Сохранить все графики в json-формате</string>
    <string name="setting_import_title">Импорт графиков</string>
    <string name="setting_import_description">Загрузить графики из json-файла</string>
    <string name="import_success">Импорт графиков завершен</string>
    <string name="export_success">Экспорт графиков завершен. Файл %1$s сохранен в загрузки</string>
</resources>