<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/RootElementStyle">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_size"
        android:layout_marginBottom="@dimen/item_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_table">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/graphic_title"
                style="@style/TextViewStyle"
                android:text="@string/graphic_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <!-- название графика -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_graphic_name"
                style="@style/TextInputStyle"
                android:layout_marginTop="@dimen/zero_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/graphic_title">

                <EditText
                    android:id="@+id/edit_graphic_name"
                    style="@style/EditTextMatchWidthStyle"
                    android:hint="@string/name_of_the_chart"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- подпись по оси X -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_x_name"
                style="@style/TextInputStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_graphic_name">

                <EditText
                    android:id="@+id/edit_x_name"
                    style="@style/EditTextMatchWidthStyle"
                    android:hint="@string/x_axis_signature"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- подпись по оси Y -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_y_name"
                style="@style/TextInputStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_x_name">

                <EditText
                    android:id="@+id/edit_y_name"
                    style="@style/EditTextMatchWidthStyle"
                    android:hint="@string/y_axis_signature"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Количество цифр после запятой по оси Y -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_count_number_after_decimal"
                style="@style/TextInputStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_y_name">

                <EditText
                    android:id="@+id/edit_count_number_after_decimal"
                    style="@style/EditTextMatchWidthStyle"
                    android:hint="@string/number_of_digits_after_decimal_point"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Вариант подиси по оси X -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_x_type"
                style="@style/TextInputDropdownMenuStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_count_number_after_decimal">
                <AutoCompleteTextView
                    android:id="@+id/edit_x_type"
                    style="@style/EditDropdownMenuMatchWidthStyle"
                    android:hint="@string/x_axis_type"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Формат даты для подиси по оси X -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_x_date_format"
                style="@style/TextInputDropdownMenuStyle"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_x_type"
                >
                <AutoCompleteTextView
                    android:id="@+id/edit_x_date_format"
                    style="@style/EditDropdownMenuMatchWidthStyle"
                    android:hint="@string/x_axis_date_format"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/lines_title"
                style="@style/TextViewStyle"
                android:text="@string/lines_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_x_date_format"/>

            <!-- блок, в который будут добавляться линии -->
            <LinearLayout
                android:id="@+id/lines_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lines_title"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    <!--        <LinearLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:orientation="vertical" />-->

    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/name_of_the_chart" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/chartName"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content" />-->

    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/x_axis_signature" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/x_axis_signature"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content" />-->

    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/y_axis_signature" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/y_axis_signature"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content" />-->

    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/number_of_digits_after_decimal_point" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/number_of_digits_after_decimal_point"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:inputType="number"/>-->

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal">-->

    <!--        <Spinner-->
    <!--            android:id="@+id/values_type_Y"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:entries="@array/тип_значений_по_оси_Y" />-->

    <!--        <Spinner-->
    <!--            android:id="@+id/date_format"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:entries="@array/формат_даты" />-->

    <!--    </LinearLayout>-->

    <!--    <LinearLayout-->
    <!--        android:id="@+id/names_of_y_columns"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical">-->

    <!--        <TextView-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/name_of_column_Y" />-->

    <!--        <include-->
    <!--            layout="@layout/layout_columns"-->
    <!--            android:id="@+id/layout_columns"/>-->

    <!--    </LinearLayout>-->

    <!--    <Button-->
    <!--        android:id="@+id/buttonAddYColumn"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="+" />-->

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal">-->

    <!--        <Button-->
    <!--            android:id="@+id/buttonCancelDescription"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/cancel" />-->

    <!--        <Button-->
    <!--            android:id="@+id/buttonToTable"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginHorizontal="@dimen/item_margin"-->
    <!--            android:text="@string/to_table" />-->
    <!--    </LinearLayout>-->

    <!--</LinearLayout>-->
    </androidx.core.widget.NestedScrollView>

    <!-- кнопка перехода к данным графика -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_table"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- кнопка добавления новой линии -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_line"
        style="@style/FloatingActionButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>